--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
     <section class="product-section">
         <div class="product">
-            <img src="/img/mens.jpg" alt="Men's Outerwear">
+            <img src="/img/mens.jpg" alt="Men's Outerwear" class="responsive">
             <h2>Men's Outerwear</h2>
             <button>Shop Now</button>
         </div>
         <div class="product">
-            <img src="/img/ladies.jpg" alt="Ladies Outerwear">
+            <img src="/img/ladies.jpg" alt="Ladies Outerwear" class="responsive">
             <h2>Ladies Outerwear</h2>
             <button>Shop Now</button>
         </div>
@@ -37,12 +37,12 @@
 
     <section class="product-section side-by-side">
         <div class="product">
-            <img src="/img/menstshirts.jpg" alt="Men's T-Shirts">
+            <img src="/img/menstshirts.jpg" alt="Men's T-Shirts" class="responsive">
             <h2>Men's T-Shirts</h2>
             <button>Shop Now</button>
         </div>
         <div class="product">
-            <img src="/img/ladiestshirts.jpg" alt="Ladies T-Shirts">
+            <img src="/img/ladiestshirts.jpg" alt="Ladies T-Shirts" class="responsive">
             <h2>Ladies T-Shirts</h2>
             <button>Shop Now</button>
         </div>
