--- a/cart.html
+++ b/cart.html
@@ -45,7 +45,7 @@
             <a href="#"><i class="fa fa-shopping-cart"></i></a>
         </div>
     </div>
-    
+    <h2>Cart page</h2>
     
 </body>
 </html>
