--- a/mensouterewar.html
+++ b/mensouterewar.html
@@ -45,6 +45,8 @@
             <a href="#"><i class="fa fa-shopping-cart"></i></a>
         </div>
     </div>
+
+    <h2>Mens outer wear page</h2>
     
     
 </body>
