--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
            
             <input type="checkbox" id="check">
             <ul>
-                <li><a href="#">Men's Outerwear</a></li>
-                <li><a href="#">Ladies Outerwear</a></li>
-                <li><a href="#">Men's T-Shirts</a></li>
-                <li><a href="#">Ladies T-Shirts</a></li>
+                <li><a href="/mensouterewar.html">Men's Outerwear</a></li>
+                <li><a href="/ladiesouterwear.html">Ladies Outerwear</a></li>
+                <li><a href="/menstshirt.html">Men's T-Shirts</a></li>
+                <li><a href="/ladiestshirt.html">Ladies T-Shirts</a></li>
             </ul>
         </nav>
         <div class = "shop"><h1><a href="index.html">SHOP</a></h1></div>
