--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main class="container">
      
       <div class="card-item means-outerwear">
-        <a href="mens-outerwear.html">
+        <a href="/mensouterewar.html">
           <img
             src="https://shop.polymer-project.org/esm-bundled/images/mens_outerwear.jpg"
             alt="mens-outerwear"
@@ -55,13 +55,13 @@
           />
         </a>
         <h2>Men's Outerwear</h2>
-        <a href="mens-outerwear.html"
+        <a href="/mensouterewar.html"
           ><button class="shop-button">SHOP NOW</button></a
         >
       </div>
      
       <div class="card-item ladies-outerwear">
-        <a href="mens-outerwear.html">
+        <a href="/ladiesouterwear.html">
           <img
             src="https://shop.polymer-project.org/esm-bundled/images/ladies_outerwear.jpg"
             alt="ladies-outerwear"
