--- a/ladiestshirt.html
+++ b/ladiestshirt.html
@@ -59,7 +59,7 @@
 
         <div class="container-items">
           <div class="each-item">
-            <a href="indivudual-item.html"
+            <a href="#"
               ><img
                 src="https://shop.polymer-project.org/esm-bundled/data/images/10-15068B.jpg"
                 alt="first-image"
@@ -68,7 +68,7 @@
             <span class="item-amount">&dollar;50.20</span>
           </div>
           <div class="each-item">
-            <a href="indivudual-item.html">
+            <a href="#">
               <img
                 src="https://shop.polymer-project.org/esm-bundled/data/images/10-14154B.jpg"
                 alt="second-image"
@@ -78,7 +78,7 @@
             <span class="item-amount">&dollar;22.15</span>
           </div>
           <div class="each-item">
-            <a href="indivudual-item.html">
+            <a href="#">
               <img
                 src="https://shop.polymer-project.org/esm-bundled/data/images/10-14157B.jpg"
                 alt="third-image"
