--- a/ladiesouterwear.html
+++ b/ladiesouterwear.html
@@ -42,7 +42,7 @@
         <div class="shadow"></div>
       </nav>
     </header>
-   
+    <!-- main-code -->
     <main>
       <div class="outer-img-container">
         <img
@@ -59,7 +59,7 @@
 
         <div class="container-items">
           <div class="each-item">
-            <a href="indivudual-item.html"
+            <a href="#"
               ><img
                 src="https://shop.polymer-project.org/esm-bundled/data/images/10-15068B.jpg"
                 alt="first-image"
@@ -68,7 +68,7 @@
             <span class="item-amount">&dollar;50.20</span>
           </div>
           <div class="each-item">
-            <a href="indivudual-item.html">
+            <a href="#">
               <img
                 src="https://shop.polymer-project.org/esm-bundled/data/images/10-14154B.jpg"
                 alt="second-image"
@@ -78,7 +78,7 @@
             <span class="item-amount">&dollar;22.15</span>
           </div>
           <div class="each-item">
-            <a href="indivudual-item.html">
+            <a href="#">
               <img
                 src="https://shop.polymer-project.org/esm-bundled/data/images/10-14157B.jpg"
                 alt="third-image"
@@ -152,7 +152,7 @@
         </div>
       </div>
     </main>
-    
+    <!-- footer -->
     <footer class="footer">
       <p>Made by Abhi</p>
       <button class="footer-button">DEMO ONLY</button>
