--- a/ladiesouterwear.html
+++ b/ladiesouterwear.html
@@ -53,7 +53,7 @@
       </div>
       <div class="container-middle">
         <header class="heading">
-          <p>Mean's Outerwear</p>
+          <p>Ladies's Outerwear</p>
           <span> &#40;16items&#41;</span>
         </header>
 
