--- a/menstshirt.html
+++ b/menstshirt.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ladies-outerwear</title>
+    <title>Men's Tshirt</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -53,7 +53,7 @@
       </div>
       <div class="container-middle">
         <header class="heading">
-          <p>Mean's Outerwear</p>
+          <p>Men's Tshirt</p>
           <span> &#40;16items&#41;</span>
         </header>
 
