--- a/index.html
+++ b/index.html
@@ -69,33 +69,33 @@
           />
         </a>
         <h2>Ladies Outerwear</h2>
-        <a href="mens-outerwear.html"
+        <a href="/ladiesouterwear.html"
           ><button class="shop-button">SHOP NOW</button></a
         >
       </div>
      
       <div class="sub-container">
         <div class="card-item mens-tshirts">
-          <a href="mens-outerwear.html">
+          <a href="/menstshirt.html">
             <img
               src="https://shop.polymer-project.org/esm-bundled/images/mens_tshirts.jpg"
               alt="mens-tshirts"
               class="images"/>
           </a>
           <h2>Men's T-Shirts</h2>
-          <a href="mensouterwear.html"
+          <a href="/menstshirt.html"
             ><button class="shop-button">SHOP NOW</button></a>
         </div>
         
         <div class="card-item ladies-tshirts">
-          <a href="mensouterwear.html">
+          <a href="/ladiestshirt.html">
             <img
               src="https://shop.polymer-project.org/esm-bundled/images/ladies_tshirts.jpg"
               alt="ladies-tshirts"
               class="images"/>
           </a>
           <h2>Ladies T-Shirts</h2>
-          <a href="mensouterwear.html"
+          <a href="/ladiestshirt.html"
             ><button class="shop-button">SHOP NOW</button></a
           >
         </div>
