--- a/index.html
+++ b/index.html
@@ -116,5 +116,10 @@
       document.querySelector(".mobile-menu").classList.toggle("active");
       document.querySelector(".shadow").classList.toggle("active");
     };
+
+    document.querySelector(".shadow").onclick = () => {
+    document.querySelector(".mobile-menu").classList.remove("active");
+    document.querySelector(".shadow").classList.remove("active");
+  };
   </script>
 </html>
