--- a/cart.html
+++ b/cart.html
@@ -10,6 +10,7 @@
     />
     <link rel="stylesheet" href="cart.css" />
     <link rel="stylesheet" href="commonStyle.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header class="header container-header">
@@ -34,6 +35,7 @@
             <li><a href="/ladiestshirt.html">Ladies T-Shirt</a></li>
           </ul>
         </div>
+
         <div class="shadow"></div>
       </nav>
     </header>
@@ -44,6 +46,18 @@
       <p>Made by Abhi</p>
       <button class="footer-button">DEMO ONLY</button>
     </footer>
+
+    <script>
+      document.querySelector(".fa-lg").onclick = () => {
+        document.querySelector(".mobile-menu").classList.toggle("active");
+        document.querySelector(".shadow").classList.toggle("active");
+      };
+  
+      document.querySelector(".shadow").onclick = () => {
+      document.querySelector(".mobile-menu").classList.remove("active");
+      document.querySelector(".shadow").classList.remove("active");
+    };
+    </script>
    
   </body>
 </html>
