--- a/individualitem.html
+++ b/individualitem.html
@@ -115,6 +115,28 @@
       <p>Made by Abhi</p>
       <button class="footer-button">DEMO ONLY</button>
     </footer>
+
+    <script>
+      const hamBurgerButton = document.querySelector(".fa-lg");
+      const mobileMenu = document.querySelector(".mobile-menu");
+      const shadow = document.querySelector(".shadow");
+  
+      hamBurgerButton.addEventListener("click", () => {
+        mobileMenu.classList.add("active");
+        shadow.classList.add("active");
+      });
+  
+      shadow.addEventListener("click", function (event) {
+        if (
+          !hamBurgerButton.contains(event.target) &&
+          !mobileMenu.contains(event.target)
+        ) {
+          mobileMenu.classList.remove("active");
+          shadow.classList.remove("active");
+        }
+      });
+    </script>
+  
   </body>
 
 </html>
