--- a/mensouterewar.html
+++ b/mensouterewar.html
@@ -59,7 +59,7 @@
 
         <div class="container-items">
           <div class="each-item">
-            <a href="#"
+            <a href="/individualitem.html"
               ><img
                 src="https://shop.polymer-project.org/esm-bundled/data/images/10-15068B.jpg"
                 alt="first-image"
@@ -78,7 +78,7 @@
             <span class="item-amount">&dollar;22.15</span>
           </div>
           <div class="each-item">
-            <a href="#">
+            <a href="/individualitem.html">
               <img
                 src="https://shop.polymer-project.org/esm-bundled/data/images/10-14157B.jpg"
                 alt="third-image"
@@ -88,7 +88,7 @@
             <span class="item-amount">&dollar;45.65</span>
           </div>
           <div class="each-item">
-            <a href="#">
+            <a href="/individualitem.html">
               <img
                 src="https://shop.polymer-project.org/esm-bundled/data/images/10-15041B.jpg"
                 alt="four-image"
@@ -98,7 +98,7 @@
             <span class="item-amount">&dollar;33.60</span>
           </div>
           <div class="each-item">
-            <a href="#">
+            <a href="/individualitem.html">
               <img
                 src="https://shop.polymer-project.org/esm-bundled/data/images/10-14133B.jpg"
                 alt="third-image"
@@ -108,7 +108,7 @@
             <span class="item-amount">&dollar;32.35</span>
           </div>
           <div class="each-item">
-            <a href="#">
+            <a href="/individualitem.html">
               <img
                 src="https://shop.polymer-project.org/esm-bundled/data/images/10-14160B.jpg"
                 alt="third-image"
@@ -134,18 +134,21 @@
             <span class="item-amount">&dollar;609.65</span>
           </div>
           <div class="each-item">
+            <a href="/individualitem.html">
             <img
               src="https://shop.polymer-project.org/esm-bundled/data/images/10-14152B.jpg"
               alt="third-image"
             />
+            </a>
             <p class="item-name">Green Flex Fleece Zip Hoodie</p>
             <span class="item-amount">&dollar;45.65</span>
           </div>
           <div class="each-item">
+            <a href="/individualitem.html">
             <img
               src="https://shop.polymer-project.org/esm-bundled/data/images/10-14155B.jpg"
               alt="third-image"
-            />
+            /></a>
             <p class="item-name">Green Flex Fleece Zip Hoodie</p>
             <span class="item-amount">&dollar;45.65</span>
           </div>
