--- a/cart.html
+++ b/cart.html
@@ -89,7 +89,7 @@
         <div class="total-amount">
           <h4>Total</h4>
           <h4>$120.18</h4>
-          <a href="#"
+          <a href="/checkout.html"
             ><button class="checkout-button">CHECKOUT</button></a>
         </div>
       </div>
@@ -98,5 +98,16 @@
       <p>Made by Abhi</p>
       <button class="footer-button">DEMO ONLY</button>
     </footer>
+    <script>
+      document.querySelector(".fa-lg").onclick = () => {
+        document.querySelector(".mobile-menu").classList.toggle("active");
+        document.querySelector(".shadow").classList.toggle("active");
+      };
+  
+      document.querySelector(".shadow").onclick = () => {
+      document.querySelector(".mobile-menu").classList.remove("active");
+      document.querySelector(".shadow").classList.remove("active");
+    };
+    </script>
      </body>
 </html>
