--- a/ladiestshirt.html
+++ b/ladiestshirt.html
@@ -158,5 +158,17 @@
       <button class="footer-button">DEMO ONLY</button>
     </footer>
 
+    <script>
+      document.querySelector(".fa-lg").onclick = () => {
+        document.querySelector(".mobile-menu").classList.toggle("active");
+        document.querySelector(".shadow").classList.toggle("active");
+      };
+  
+      document.querySelector(".shadow").onclick = () => {
+      document.querySelector(".mobile-menu").classList.remove("active");
+      document.querySelector(".shadow").classList.remove("active");
+    };
+    </script>
+
   </body>
 </html>
