--- a/mensouterewar.html
+++ b/mensouterewar.html
@@ -67,8 +67,7 @@
             <p class="item-name">Means Tech Shell Full-Zip</p>
             <span class="item-amount">&dollar;50.20</span>
           </div>
-          <div class="each-item">
-            <a href="#">
+          <div class="each-item"  onclick="logItemData(event)">            <a href="#">
               <img
                 src="https://shop.polymer-project.org/esm-bundled/data/images/10-14154B.jpg"
                 alt="second-image"
@@ -77,8 +76,7 @@
             <p class="item-name">Anvil L/S Crew Neck-Grey</p>
             <span class="item-amount">&dollar;22.15</span>
           </div>
-          <div class="each-item">
-            <a href="/individualitem.html">
+          <div class="each-item"  onclick="logItemData(event)">            <a href="/individualitem.html">
               <img
                 src="https://shop.polymer-project.org/esm-bundled/data/images/10-14157B.jpg"
                 alt="third-image"
@@ -87,8 +85,8 @@
             <p class="item-name">Green Flex Fleece Zip Hoodie</p>
             <span class="item-amount">&dollar;45.65</span>
           </div>
-          <div class="each-item">
-            <a href="/individualitem.html">
+          <div class="each-item"  onclick="logItemData(event)">
+                        <a href="/individualitem.html">
               <img
                 src="https://shop.polymer-project.org/esm-bundled/data/images/10-15041B.jpg"
                 alt="four-image"
@@ -97,8 +95,8 @@
             <p class="item-name">Android Nylon Packable</p>
             <span class="item-amount">&dollar;33.60</span>
           </div>
-          <div class="each-item">
-            <a href="/individualitem.html">
+          <div class="each-item"  onclick="logItemData(event)">
+                        <a href="/individualitem.html">
               <img
                 src="https://shop.polymer-project.org/esm-bundled/data/images/10-14133B.jpg"
                 alt="third-image"
@@ -107,7 +105,7 @@
             <p class="item-name">YouTube Ultimate Hooded Sweatshirt</p>
             <span class="item-amount">&dollar;32.35</span>
           </div>
-          <div class="each-item">
+          <div class="each-item"  onclick="logItemData(event)">
             <a href="/individualitem.html">
               <img
                 src="https://shop.polymer-project.org/esm-bundled/data/images/10-14160B.jpg"
@@ -117,23 +115,27 @@
             <p class="item-name">Gray Heather Fleece Zip Hoodie</p>
             <span class="item-amount">&dollar;38.85</span>
           </div>
-          <div class="each-item">
+          <div class="each-item"  onclick="logItemData(event)">
+            <a href="/individualitem.html">
             <img
               src="https://shop.polymer-project.org/esm-bundled/data/images/10-14153B.jpg"
               alt="third-image"
             />
+            </a>
             <p class="item-name">Vastrm Hoodie</p>
             <span class="item-amount">&dollar;200.00</span>
           </div>
-          <div class="each-item">
+          <div class="each-item"  onclick="logItemData(event)">
+            <a href="/individualitem.html">
             <img
               src="https://shop.polymer-project.org/esm-bundled/data/images/10-14158B.jpg"
               alt="third-image"
             />
+            </a>
             <p class="item-name">Recycle Plastic Bottle Hoodie-Green</p>
             <span class="item-amount">&dollar;609.65</span>
           </div>
-          <div class="each-item">
+          <div class="each-item"  onclick="logItemData(event)">
             <a href="/individualitem.html">
             <img
               src="https://shop.polymer-project.org/esm-bundled/data/images/10-14152B.jpg"
@@ -143,7 +145,7 @@
             <p class="item-name">Green Flex Fleece Zip Hoodie</p>
             <span class="item-amount">&dollar;45.65</span>
           </div>
-          <div class="each-item">
+          <div class="each-item"  onclick="logItemData(event)">
             <a href="/individualitem.html">
             <img
               src="https://shop.polymer-project.org/esm-bundled/data/images/10-14155B.jpg"
@@ -162,6 +164,27 @@
     </footer>
 
     <script>
+
+        // Get the parent container of the clicked item and also get the specific item container that was clicked
+  function logItemData(event) {
+     const itemContainer = event.currentTarget.closest(".each-item");
+
+  // Get the name, price, and image of the clicked item only
+  const itemName = itemContainer.querySelector(".item-name").innerText;
+  const itemPrice = itemContainer.querySelector(".item-amount").innerText;
+  const itemImage = itemContainer.querySelector("img").src;
+
+
+  //store in
+          localStorage.setItem("itemName", itemName);
+          localStorage.setItem("itemPrice", itemPrice);
+          localStorage.setItem("itemImage", itemImage);
+
+  // Log the data to the console
+  console.log("Item Name:", itemName);
+  console.log("Item Price:", itemPrice);
+  console.log("Image Source:", itemImage);
+}
       document.querySelector(".fa-lg").onclick = () => {
         document.querySelector(".mobile-menu").classList.toggle("active");
         document.querySelector(".shadow").classList.toggle("active");
