--- a/checkout.html
+++ b/checkout.html
@@ -40,7 +40,7 @@
     <main>
       <header class="heading">
         <h3>Checkout</h3>
-        <p id="description">Shop is a demo app - form data will not be sent</p>
+        <p id="description">Shop is a demo app - Any data will not be saved or send</p>
       </header>
       <div class="container">
         <!-- account info -->
