--- a/checkout.html
+++ b/checkout.html
@@ -20,6 +20,7 @@
           </div>
           <a href="index.html"> <h3 class="shop">SHOP</h3></a>
           <div class="right-sidebar">
+            <div class = "noOfItems">1</div>
             <a href="cart.html"
               ><i class="fa-solid fa-cart-shopping fa-1g"></i
             ></a>
@@ -65,11 +66,11 @@
           </div>
           <div class="state-code">
             <div class="floating-label">
-              <input type="text" id="state" required />
+              <input type="int" id="state" required />
               <label for="state">State/Province</label>
             </div>
             <div class="floating-label">
-              <input type="text" id="zip" required />
+              <input type="int" id="zip" required />
               <label for="zip">Zip/Postal Code</label>
             </div>
           </div>
