--- a/individualitem.html
+++ b/individualitem.html
@@ -20,6 +20,7 @@
           </div>
           <a href="index.html"> <h3 class="shop">SHOP</h3></a>
           <div class="right-sidebar">
+            <div class = "noOfItems">1</div>
             <a href="cart.html"><i class="fa-solid fa-cart-shopping fa-1g"></i></a>
           </div>
         </div>
@@ -41,17 +42,14 @@
       </nav>
     </header>
 
-    <!-- main-page  -->
     <main>
       <div class="container">
-        <!-- image -->
         <div class="image-container">
           <img
           src="https://shop.polymer-project.org/esm-bundled/data/images/10-14158B.jpg"
             alt="mean-shirt"
           />
         </div>
-        <!-- data -->
         <div class="imag-data">
           <h1>Recycle Plastic Bottle Hoodie-Green</h1>
           <p class = "price" >&dollar;60.9</p>
