--- a/menstshirt.html
+++ b/menstshirt.html
@@ -20,6 +20,7 @@
           </div>
           <a href="index.html"> <h3 class="shop">SHOP</h3></a>
           <div class="right-sidebar">
+            <div class = "noOfItems">1</div>
             <a href="cart.html"
               ><i class="fa-solid fa-cart-shopping fa-1g"></i
             ></a>
